# Traitement-Image-M1

./: .gitignore  README.md
TP1/: CMakeLists.txt  main.cpp
TP2/: CMakeLists.txt  Filter.cpp  Filter.h  main.cpp
